use status detection to avoid page flicker

--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -211,7 +211,7 @@
     }
 
     .main {
-      padding: 60px 20px;
+      padding: 20px;
       margin-left: 243px;
       // border: 1px solid violet;
       // z-index: 2;
